syntax = "proto3";

package myorg.user.services;

option java_package="myorg.user.services";
option java_multiple_files = true;

service UserService{
rpc getUser(UserRequest) returns (UserResponse);
}

message UserRequest{
	string username = 1;
}

message UserResponse{
	int32 id = 1;
	string username = 2;
	string name = 3;
	int32 age = 4;
	Gender gender = 5;
}
enum Gender{
 MALE = 0;
 FEMALE =1;
 OTHER = 2;
}